// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton renders correctly 1`] = `
<DocumentFragment>
  .cache-16ljkze-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #4f0599;
  border: 1px solid #4f0599;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-16ljkze-StyledButton:hover {
  background: #eeeeff;
}

.cache-16ljkze-StyledButtonactive,
.cache-16ljkze-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r0:"
  >
    <button
      class="cache-16ljkze-StyledButton e1go4oa30"
      type="button"
    >
      <svg
        aria-label="copy-content"
        class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly variant large 1`] = `
<DocumentFragment>
  .cache-r06x4m-StyledButton {
  width: 48px;
  height: 48px;
  background: transparent;
  color: #4f0599;
  border: 1px solid #4f0599;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-r06x4m-StyledButton:hover {
  background: #eeeeff;
}

.cache-r06x4m-StyledButtonactive,
.cache-r06x4m-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r2:"
  >
    <button
      class="cache-r06x4m-StyledButton e1go4oa30"
      type="button"
    >
      <svg
        aria-label="copy-content"
        class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly variant neutral 1`] = `
<DocumentFragment>
  .cache-xsw6vc-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #4a4f62;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-xsw6vc-StyledButton:hover {
  background: #e6e9f0;
}

.cache-xsw6vc-StyledButtonactive,
.cache-xsw6vc-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r4:"
  >
    <button
      class="cache-xsw6vc-StyledButton e1go4oa30"
      type="button"
    >
      <svg
        aria-label="copy-content"
        class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly variant primary 1`] = `
<DocumentFragment>
  .cache-16ljkze-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #4f0599;
  border: 1px solid #4f0599;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-16ljkze-StyledButton:hover {
  background: #eeeeff;
}

.cache-16ljkze-StyledButtonactive,
.cache-16ljkze-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r3:"
  >
    <button
      class="cache-16ljkze-StyledButton e1go4oa30"
      type="button"
    >
      <svg
        aria-label="copy-content"
        class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly variant small 1`] = `
<DocumentFragment>
  .cache-16ljkze-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #4f0599;
  border: 1px solid #4f0599;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-16ljkze-StyledButton:hover {
  background: #eeeeff;
}

.cache-16ljkze-StyledButtonactive,
.cache-16ljkze-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r1:"
  >
    <button
      class="cache-16ljkze-StyledButton e1go4oa30"
      type="button"
    >
      <svg
        aria-label="copy-content"
        class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom class name 1`] = `
<DocumentFragment>
  .cache-16ljkze-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #4f0599;
  border: 1px solid #4f0599;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-16ljkze-StyledButton:hover {
  background: #eeeeff;
}

.cache-16ljkze-StyledButtonactive,
.cache-16ljkze-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r8:"
  >
    <button
      class="custom-class cache-16ljkze-StyledButton e1go4oa30"
      type="button"
    >
      <svg
        aria-label="copy-content"
        class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copied text 1`] = `
<DocumentFragment>
  .cache-16ljkze-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #4f0599;
  border: 1px solid #4f0599;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-16ljkze-StyledButton:hover {
  background: #eeeeff;
}

.cache-16ljkze-StyledButtonactive,
.cache-16ljkze-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r7:"
  >
    <button
      class="cache-16ljkze-StyledButton e1go4oa30"
      type="button"
    >
      <svg
        aria-label="copy-content"
        class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copy text 1`] = `
<DocumentFragment>
  .cache-16ljkze-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #4f0599;
  border: 1px solid #4f0599;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-16ljkze-StyledButton:hover {
  background: #eeeeff;
}

.cache-16ljkze-StyledButtonactive,
.cache-16ljkze-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r6:"
  >
    <button
      class="cache-16ljkze-StyledButton e1go4oa30"
      type="button"
    >
      <svg
        aria-label="copy-content"
        class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with no border 1`] = `
<DocumentFragment>
  .cache-1gy37wj-StyledButton {
  width: 32px;
  height: 32px;
  background: transparent;
  color: #4f0599;
  border: none;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.cache-1gy37wj-StyledButton:hover {
  background: #eeeeff;
}

.cache-1gy37wj-StyledButtonactive,
.cache-1gy37wj-StyledButton:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    aria-describedby=":r5:"
  >
    <button
      class="cache-1gy37wj-StyledButton e1go4oa30"
      type="button"
    >
      <svg
        aria-label="copy-content"
        class="cache-kbjega-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
